fix alignment fot loading text

--- a/src/index.css
+++ b/src/index.css
@@ -284,3 +284,6 @@ h1 {
   font-weight: 500;
 }
 
+.loading{
+  text-align: center;
+}
